# gangtise-data-mcp

./: .gitignore  Dockerfile  README.cn.md  README.en.md  README.md  tool_url_deps.json
api/gangtise_agent/: README.cn.md  README.en.md  README.md  pyproject.toml
api/gangtise_agent/src/: authorization.html  http_server.py  obs_upload.py
api/gangtise_data/: README.cn.md  README.en.md  README.md  pyproject.toml
api/gangtise_data/src/: authorization.py  http_server.py
api/gangtise_file/: README.cn.md  README.md  pyproject.toml
api/gangtise_file/src/: http_server.py  url_whitelist.py
api/gangtise_hub/: README.cn.md  README.en.md  README.md  pyproject.toml
api/gangtise_hub/src/: http_server.py
api/gangtise_kb/: README.cn.md  README.md  pyproject.toml
api/gangtise_kb/src/: http_server.py
api/gangtise_mcp/: README.cn.md  README.md  pyproject.toml
api/gangtise_mcp/src/: http_gateway.py  http_server.py  oauth_asgi.py  oauth_tokens.py  services.py
api/gangtise_private/: README.cn.md  README.md  pyproject.toml
api/gangtise_private/src/: http_server.py  tool_errors.py
cli/gangtise_agent/: README.cn.md  README.en.md  README.md  pyproject.toml
cli/gangtise_agent/src/: cli.py
cli/gangtise_data/: README.cn.md  README.en.md  README.md  pyproject.toml
cli/gangtise_data/src/: cli.py
cli/gangtise_file/: README.cn.md  README.en.md  README.md  pyproject.toml
cli/gangtise_file/src/: cli.py
cli/gangtise_hub/: README.cn.md  README.en.md  README.md  pyproject.toml
cli/gangtise_hub/src/: cli.py
cli/gangtise_kb/: README.cn.md  README.en.md  README.md  pyproject.toml
cli/gangtise_kb/src/: cli.py
cli/gangtise_mcp/: LICENSE  README.cn.md  README.en.md  README.md  pyproject.toml
cli/gangtise_mcp/src/: cli.py
cli/gangtise_private/: README.cn.md  README.en.md  README.md  pyproject.toml
cli/gangtise_private/src/: cli.py
docs/: docker-deploy.cn.md  docker-deploy.en.md  docker-deploy.md  http-sse.cn.md  http-sse.en.md  http-sse.md
mcp/gangtise_agent/: README.cn.md  README.en.md  README.md  pyproject.toml
mcp/gangtise_agent/docs/: docker-deploy.cn.md
mcp/gangtise_agent/src/: agent_server.py  generate_references.py  references_loader.py  skill_reference_loader.py
mcp/gangtise_agent/src/gangtise_agent/: __init__.py  agents.py  hot_topic.py  search_concept.py  security.py  security_clue.py  tools_registry.py  utils.py
mcp/gangtise_agent/src/gangtise_agent/references/: earnings_review.yaml  hot_topic.yaml  investment_logic.yaml  peer_comparison.yaml  research_outline.yaml  security_clue.yaml  stock_one_line_summary.yaml  stock_one_pager.yaml  theme_tracking.yaml  viewpoint_debate.yaml
mcp/gangtise_data/: README.cn.md  README.en.md  README.md  pyproject.toml
mcp/gangtise_data/docs/: docker-deploy.md  http-sse.en.md  http-sse.md
mcp/gangtise_data/src/: data_server.py  skill_reference_loader.py
mcp/gangtise_data/src/gangtise_data/: __init__.py  block_constituents.py  company_indicator.py  concept.py  earning_forecast.py  financial.py  fund_flow.py  industry_indicator.py  main_business.py  quote.py  search_concept.py  security.py  shareholder.py  tools_registry.py  utils.py  valuation.py
mcp/gangtise_data/src/gangtise_data/references/: block_constituents.yaml  company_indicator.yaml  concept.yaml  earning_forecast.yaml  financial.yaml  fund_flow.yaml  industry_indicator.yaml  main_business.yaml  quote.yaml  security.yaml  shareholder.yaml  valuation.yaml
mcp/gangtise_file/: README.cn.md  README.en.md  README.md  pyproject.toml
mcp/gangtise_file/docs/: http-sse.cn.md
mcp/gangtise_file/src/: file_server.py  http_compat.py  references_loader.py  skill_reference_loader.py
mcp/gangtise_file/src/gangtise_file/: __init__.py  announcement.py  foreign_opinion.py  foreign_report.py  get_announcement_types.py  get_chiefs.py  get_file.py  get_industries.py  get_institutions.py  get_regions.py  investment_calendar.py  management_discuss.py  official_account.py  opinion.py  qa.py  report.py  report_image.py  search_account.py  search_chief.py  search_institution.py  security.py  summary.py  tools_registry.py  utils.py
mcp/gangtise_file/src/gangtise_file/references/: announcement.yaml  foreign_opinion.yaml  foreign_report.yaml  get_announcement_types.yaml  get_chiefs.yaml  get_file.yaml  get_industries.yaml  get_institutions.yaml  get_regions.yaml  investment_calendar.yaml  management_discuss.yaml  official_account.yaml  opinion.yaml  qa.yaml  report.yaml  report_image.yaml  summary.yaml
mcp/gangtise_hub/: README.cn.md  README.en.md  README.md  pyproject.toml
mcp/gangtise_hub/src/: domains.py  hub_server.py  package_loader.py  references_loader.py  router.py
mcp/gangtise_kb/: README.cn.md  README.en.md  README.md  pyproject.toml
mcp/gangtise_kb/src/: generate_references.py  http_compat.py  kb_server.py  skill_reference_loader.py
mcp/gangtise_kb/src/gangtise_kb/: __init__.py  get_file.py  kb.py  tools_registry.py  utils.py
mcp/gangtise_kb/src/gangtise_kb/references/: kb.yaml
mcp/gangtise_mcp/: README.cn.md  README.en.md  README.md  entrypoint.sh  gateway.py  pyproject.toml
mcp/gangtise_mcp/docs/: docker-deploy.en.md
mcp/gangtise_mcp/src/: authorization.py  full_server.py  references_loader.py  result_attachments.py  services.py  tool_catalog.py  tools_registry.py
mcp/gangtise_private/: README.cn.md  README.en.md  README.md  pyproject.toml
mcp/gangtise_private/docs/: http-sse.md
mcp/gangtise_private/src/: private_server.py  references_loader.py  skill_reference_loader.py  tool_errors.py
mcp/gangtise_private/src/gangtise_private/: __init__.py  private_cloud.py  private_meeting.py  private_record.py  stockpool.py  tools_registry.py  utils.py  wechat_message.py
mcp/gangtise_private/src/gangtise_private/references/: private_cloud.yaml  private_meeting.yaml  private_record.yaml  stockpool.yaml  wechat_message.yaml
scripts/: scan_tool_url_deps.py
