[project]
name = "gangtise-data-api"
version = "0.1.0"
description = "Gangtise MCP HTTP/SSE API (gangtise_data): OAuth/auth + network transports over gangtise-data-mcp."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Gangtise" }]
dependencies = [
    "gangtise-data-mcp",
    "uvicorn>=0.30.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "starlette>=0.37.0",
]

[project.scripts]
gangtise-data-api = "http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
only-include = ["src", "pyproject.toml", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel.force-include]
"src/authorization.html" = "authorization.html"

[tool.uv.sources]
gangtise-data-mcp = { path = "../../mcp/gangtise_data", editable = true }
