[project]
name = "gangtise-hub-api"
version = "0.1.0"
description = "Gangtise Hub MCP HTTP/SSE API: OAuth/auth over gangtise-hub-mcp."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Gangtise" }]
dependencies = [
    "gangtise-hub-mcp",
    "uvicorn>=0.30.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "starlette>=0.37.0",
]

[project.scripts]
gangtise-hub-api = "http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
only-include = ["src", "pyproject.toml", "README.md", "LICENSE"]


[tool.uv.sources]
gangtise-hub-mcp = { path = "../../mcp/gangtise_hub", editable = true }
