[project]
name = "gangtise-kb-cli"
version = "0.1.0"
description = "Gangtise CLI (gangtise_kb)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Gangtise" }]
dependencies = [
    "gangtise-kb-mcp",
    "requests>=2.32.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0",
]

[project.scripts]
gangtise-kb = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
only-include = ["src", "pyproject.toml", "README.md", "LICENSE"]

[tool.uv.sources]
gangtise-kb-mcp = { path = "../../mcp/gangtise_kb", editable = true }
