[project]
name = "gangtise-mcp-cli"
version = "0.1.0"
description = "Gangtise CLI (gangtise_mcp)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Gangtise" }]
dependencies = [
    "gangtise-mcp",
    "requests>=2.32.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0",
]

[project.scripts]
gangtise = "cli:main"
gangtise-mcp-cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
only-include = ["src", "pyproject.toml", "README.md", "LICENSE"]

[tool.uv.sources]
gangtise-mcp = { path = "../../mcp/gangtise_mcp", editable = true }
