[project]
name = "gangtise-mcp"
version = "0.1.0"
description = "Gangtise MCP Server (stdio): all leaf tools from five domain packages."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Gangtise" }]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.32.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0",
    "gangtise-agent-mcp",
    "gangtise-data-mcp",
    "gangtise-file-mcp",
    "gangtise-kb-mcp",
    "gangtise-private-mcp",
]

[project.scripts]
gangtise-mcp = "full_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
only-include = ["src", "pyproject.toml", "README.md", "LICENSE"]

[tool.uv.sources]
gangtise-agent-mcp = { path = "../gangtise_agent", editable = true }
gangtise-data-mcp = { path = "../gangtise_data", editable = true }
gangtise-file-mcp = { path = "../gangtise_file", editable = true }
gangtise-kb-mcp = { path = "../gangtise_kb", editable = true }
gangtise-private-mcp = { path = "../gangtise_private", editable = true }
