[project]
name = "gangtise-private-mcp"
version = "0.1.0"
description = "Gangtise MCP Server (gangtise_private): business scripts + stdio MCP."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Gangtise" }]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.32.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0",
]

[project.scripts]
gangtise-private-mcp = "private_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
only-include = ["src", "pyproject.toml", "README.md", "LICENSE"]
